src/gen/java_grammarParser.py
# Generated from grammar/java_grammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class java_grammarParser ( Parser ):

    grammarFileName = "java_grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ArrayList'", "'LinkedList'", "'HashSet'", 
                     "'HashMap'", "'if'", "'else'", "'switch'", "'case'", 
                     "'while'", "'for'", "'break'", "'continue'", "'do'", 
                     "'class'", "'interface'", "'enum'", "'public'", "'private'", 
                     "'protected'", "'static'", "'abstract'", "'default'", 
                     "'extends'", "'implements'", "'throws'", "'System.out.print'", 
                     "'System.out.println'", "'Scanner'", "'next'", "'true'", 
                     "'false'", "'null'", "'throw'", "'try'", "'catch'", 
                     "'finally'", "'new'", "'this'", "'return'", "'assert'", 
                     "'import'", "'package'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'=='", 
                     "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", 
                     "'!'", "'++'", "'--'", "'='", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "':'", "';'", "'.'", "','", "'void'", 
                     "'int'", "'float'", "'double'", "'long'", "'short'", 
                     "'byte'", "'char'", "'boolean'", "'String'" ]

    symbolicNames = [ "<INVALID>", "ARRAYLIST", "LINKEDLIST", "HASHSET", 
                      "HASHMAP", "IF", "ELSE", "SWITCH", "CASE", "WHILE", 
                      "FOR", "BREAK", "CONTINUE", "DO", "CLASS", "INTERFACE", 
                      "ENUM", "PUBLIC", "PRIVATE", "PROTECTED", "STATIC", 
                      "ABSTRACT", "DEFAULT", "EXTENDS", "IMPLEMENTS", "THROWS", 
                      "PRINT", "PRINTLN", "SCANNER", "NEXT", "TRUE", "FALSE", 
                      "NULL", "THROW", "TRY", "CATCH", "FINALLY", "NEW", 
                      "THIS", "RETURN", "ASSERT", "IMPORT", "PACKAGE", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LSQUARE", "RSQUARE", "EQUAL", "NOT_EQUAL", 
                      "GREATER_THAN", "LESS_THAN", "GREATER_THAN_OR_EQUAL", 
                      "LESS_THAN_OR_EQUAL", "LOGICAL_AND", "LOGICAL_OR", 
                      "LOGICAL_NOT", "INCREMENT", "DECREMENT", "ASSIGN", 
                      "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "COLON", "SEMICOLON", "DOT", "COMMA", 
                      "VOID", "INT", "FLOAT", "DOUBLE", "LONG", "SHORT", 
                      "BYTE", "CHAR", "BOOLEAN", "STRING", "ID", "INTEGER_NUMBER", 
                      "FLOAT_NUMBER", "STRING_TEXT", "CHARACTER", "WHITESPACES", 
                      "BLOCKCOMMENT", "SINGLELINECOMMENT" ]

    RULE_program = 0
    RULE_importDeclaration = 1
    RULE_packageDeclaration = 2
    RULE_structerDeclaration = 3
    RULE_classDeclaration = 4
    RULE_classBody = 5
    RULE_superClass = 6
    RULE_interfaces = 7
    RULE_classMemberDeclaration = 8
    RULE_constructor = 9
    RULE_enumDeclaration = 10
    RULE_enumBody = 11
    RULE_interfaceDeclaration = 12
    RULE_interfaceBody = 13
    RULE_interfaceMemberDeclaration = 14
    RULE_fieldDeclaration = 15
    RULE_methodDeclaration = 16
    RULE_throwedExeption = 17
    RULE_formalParameters = 18
    RULE_formalParameter = 19
    RULE_methodBody = 20
    RULE_block = 21
    RULE_variableDeclarators = 22
    RULE_statement = 23
    RULE_fullIfStatement = 24
    RULE_ifStatement = 25
    RULE_elseIfStatement = 26
    RULE_elseStatement = 27
    RULE_whileStatement = 28
    RULE_doWhileStatement = 29
    RULE_forStatement = 30
    RULE_forControl = 31
    RULE_traditionalForControl = 32
    RULE_forInit = 33
    RULE_forCondition = 34
    RULE_forUpdate = 35
    RULE_enhancedForControl = 36
    RULE_switchStatement = 37
    RULE_switchBlock = 38
    RULE_switchBlockStatementGroup = 39
    RULE_switchLabel = 40
    RULE_tryStatement = 41
    RULE_catchClause = 42
    RULE_catchFormalParameter = 43
    RULE_finallyBlock = 44
    RULE_returnStatement = 45
    RULE_breakStatement = 46
    RULE_continueStatement = 47
    RULE_throwStatement = 48
    RULE_expression = 49
    RULE_logicalExpression = 50
    RULE_logicalTerm = 51
    RULE_unaryLogicalExpression = 52
    RULE_logicalOperator = 53
    RULE_arithmeticExpression = 54
    RULE_arithmeticTerm = 55
    RULE_unaryArithmeticExpression = 56
    RULE_arithmeticOperator = 57
    RULE_assignmentStatement = 58
    RULE_assignedValue = 59
    RULE_assignmentOperator = 60
    RULE_literal = 61
    RULE_newInstance = 62
    RULE_incrementStatement = 63
    RULE_decrementStatement = 64
    RULE_functionCall = 65
    RULE_parameters = 66
    RULE_parameter = 67
    RULE_type = 68
    RULE_dataType = 69
    RULE_modifiers = 70
    RULE_modifier = 71
    RULE_classModifiers = 72
    RULE_classModifier = 73
    RULE_dataStructerDeclaration = 74
    RULE_dataStructers = 75
    RULE_printStatement = 76
    RULE_inputStatement = 77
    RULE_extendedIDwithThis = 78
    RULE_extendedID = 79

    ruleNames =  [ "program", "importDeclaration", "packageDeclaration", 
                   "structerDeclaration", "classDeclaration", "classBody", 
                   "superClass", "interfaces", "classMemberDeclaration", 
                   "constructor", "enumDeclaration", "enumBody", "interfaceDeclaration", 
                   "interfaceBody", "interfaceMemberDeclaration", "fieldDeclaration", 
                   "methodDeclaration", "throwedExeption", "formalParameters", 
                   "formalParameter", "methodBody", "block", "variableDeclarators", 
                   "statement", "fullIfStatement", "ifStatement", "elseIfStatement", 
                   "elseStatement", "whileStatement", "doWhileStatement", 
                   "forStatement", "forControl", "traditionalForControl", 
                   "forInit", "forCondition", "forUpdate", "enhancedForControl", 
                   "switchStatement", "switchBlock", "switchBlockStatementGroup", 
                   "switchLabel", "tryStatement", "catchClause", "catchFormalParameter", 
                   "finallyBlock", "returnStatement", "breakStatement", 
                   "continueStatement", "throwStatement", "expression", 
                   "logicalExpression", "logicalTerm", "unaryLogicalExpression", 
                   "logicalOperator", "arithmeticExpression", "arithmeticTerm", 
                   "unaryArithmeticExpression", "arithmeticOperator", "assignmentStatement", 
                   "assignedValue", "assignmentOperator", "literal", "newInstance", 
                   "incrementStatement", "decrementStatement", "functionCall", 
                   "parameters", "parameter", "type", "dataType", "modifiers", 
                   "modifier", "classModifiers", "classModifier", "dataStructerDeclaration", 
                   "dataStructers", "printStatement", "inputStatement", 
                   "extendedIDwithThis", "extendedID" ]

    EOF = Token.EOF
    ARRAYLIST=1
    LINKEDLIST=2
    HASHSET=3
    HASHMAP=4
    IF=5
    ELSE=6
    SWITCH=7
    CASE=8
    WHILE=9
    FOR=10
    BREAK=11
    CONTINUE=12
    DO=13
    CLASS=14
    INTERFACE=15
    ENUM=16
    PUBLIC=17
    PRIVATE=18
    PROTECTED=19
    STATIC=20
    ABSTRACT=21
    DEFAULT=22
    EXTENDS=23
    IMPLEMENTS=24
    THROWS=25
    PRINT=26
    PRINTLN=27
    SCANNER=28
    NEXT=29
    TRUE=30
    FALSE=31
    NULL=32
    THROW=33
    TRY=34
    CATCH=35
    FINALLY=36
    NEW=37
    THIS=38
    RETURN=39
    ASSERT=40
    IMPORT=41
    PACKAGE=42
    ADD=43
    SUB=44
    MUL=45
    DIV=46
    MOD=47
    LPAREN=48
    RPAREN=49
    LBRACE=50
    RBRACE=51
    LSQUARE=52
    RSQUARE=53
    EQUAL=54
    NOT_EQUAL=55
    GREATER_THAN=56
    LESS_THAN=57
    GREATER_THAN_OR_EQUAL=58
    LESS_THAN_OR_EQUAL=59
    LOGICAL_AND=60
    LOGICAL_OR=61
    LOGICAL_NOT=62
    INCREMENT=63
    DECREMENT=64
    ASSIGN=65
    ADD_ASSIGN=66
    SUB_ASSIGN=67
    MUL_ASSIGN=68
    DIV_ASSIGN=69
    MOD_ASSIGN=70
    COLON=71
    SEMICOLON=72
    DOT=73
    COMMA=74
    VOID=75
    INT=76
    FLOAT=77
    DOUBLE=78
    LONG=79
    SHORT=80
    BYTE=81
    CHAR=82
    BOOLEAN=83
    STRING=84
    ID=85
    INTEGER_NUMBER=86
    FLOAT_NUMBER=87
    STRING_TEXT=88
    CHARACTER=89
    WHITESPACES=90
    BLOCKCOMMENT=91
    SINGLELINECOMMENT=92

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(java_grammarParser.PUBLIC, 0)

        def importDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(java_grammarParser.ImportDeclarationContext)
            else:
                return self.getTypedRuleContext(java_grammarParser.ImportDeclarationContext,i)


        def packageDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(java_grammarParser.PackageDeclarationContext)
            else:
                return self.getTypedRuleContext(java_grammarParser.PackageDeclarationContext,i)


        def structerDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(java_grammarParser.StructerDeclarationContext)
            else:
                return self.getTypedRuleContext(java_grammarParser.StructerDeclarationContext,i)


        def getRuleIndex(self):
            return java_grammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = java_grammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41 or _la==42:
                self.state = 162
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [41]:
                    self.state = 160
                    self.importDeclaration()
                    pass
                elif token in [42]:
                    self.state = 161
                    self.packageDeclaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 167
            self.match(java_grammarParser.PUBLIC)
            self.state = 169 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 168
                self.structerDeclaration()
                self.state = 171 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7192576) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(java_grammarParser.IMPORT, 0)

        def extendedID(self):
            return self.getTypedRuleContext(java_grammarParser.ExtendedIDContext,0)


        def SEMICOLON(self):
            return self.getToken(java_grammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return java_grammarParser.RULE_importDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDeclaration" ):
                listener.enterImportDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDeclaration" ):
                listener.exitImportDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDeclaration" ):
                return visitor.visitImportDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def importDeclaration(self):

        localctx = java_grammarParser.ImportDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(java_grammarParser.IMPORT)
            self.state = 174
            self.extendedID()
            self.state = 175
            self.match(java_grammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(java_grammarParser.PACKAGE, 0)

        def extendedID(self):
            return self.getTypedRuleContext(java_grammarParser.ExtendedIDContext,0)


        def SEMICOLON(self):
            return self.getToken(java_grammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return java_grammarParser.RULE_packageDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDeclaration" ):
                listener.enterPackageDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDeclaration" ):
                listener.exitPackageDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageDeclaration" ):
                return visitor.visitPackageDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def packageDeclaration(self):

        localctx = java_grammarParser.PackageDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_packageDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(java_grammarParser.PACKAGE)
            self.state = 178
            self.extendedID()
            self.state = 179
            self.match(java_grammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructerDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self):
            return self.getTypedRuleContext(java_grammarParser.ClassDeclarationContext,0)


        def interfaceDeclaration(self):
            return self.getTypedRuleContext(java_grammarParser.InterfaceDeclarationContext,0)


        def enumDeclaration(self):
            return self.getTypedRuleContext(java_grammarParser.EnumDeclarationContext,0)


        def getRuleIndex(self):
            return java_grammarParser.RULE_structerDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructerDeclaration" ):
                listener.enterStructerDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructerDeclaration" ):
                listener.exitStructerDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructerDeclaration" ):
                return visitor.visitStructerDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def structerDeclaration(self):

        localctx = java_grammarParser.StructerDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structerDeclaration)
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.classDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 182
                self.interfaceDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 183
                self.enumDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(java_grammarParser.CLASS, 0)

        def ID(self):
            return self.getToken(java_grammarParser.ID, 0)

        def classBody(self):
            return self.getTypedRuleContext(java_grammarParser.ClassBodyContext,0)


        def classModifiers(self):
            return self.getTypedRuleContext(java_grammarParser.ClassModifiersContext,0)


        def superClass(self):
            return self.getTypedRuleContext(java_grammarParser.SuperClassContext,0)


        def interfaces(self):
            return self.getTypedRuleContext(java_grammarParser.InterfacesContext,0)


        def getRuleIndex(self):
            return java_grammarParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = java_grammarParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 7077888) != 0):
                self.state = 186
                self.classModifiers()


            self.state = 189
            self.match(java_grammarParser.CLASS)
            self.state = 190
            self.match(java_grammarParser.ID)
            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 191
                self.superClass()


            self.state = 195
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 194
                self.interfaces()


            self.state = 197
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(java_grammarParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(java_grammarParser.RBRACE, 0)

        def classMemberDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(java_grammarParser.ClassMemberDeclarationContext)
            else:
                return self.getTypedRuleContext(java_grammarParser.ClassMemberDeclarationContext,i)


        def getRuleIndex(self):
            return java_grammarParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = java_grammarParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.match(java_grammarParser.LBRACE)
            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8372254) != 0) or ((((_la - 75)) & ~0x3f) == 0 and ((1 << (_la - 75)) & 2047) != 0):
                self.state = 200
                self.classMemberDeclaration()
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)
